$Id: CHANGELOG.txt,v 1.31 2006/03/07 00:05:56 gregluck Exp $

<release version="0.6" date="2008-12-24" desc="Major release">
    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Register Ehcache core MBeans with the platform MBeanServer. This adds Ehcache JMX support
        to the web container, which can then be accessed by JMX consoles in the same way that the
        web container supports, which is normally exposing an RMI service URL. See the documentation
        for examples on how to use this with Tomcat and Glassfish.
    </action>
    <action dev="Greg Luck" type="update">
        Upgrade Jersey to the 1.0 release. There are no behavioural changes.
    </action>
    <action dev="Greg Luck" type="update">
        Cache resources now return a more complete representation showing configuration and statistics sub-elements. 
    </action>
    <action dev="Greg Luck" type="add">
        Added a DELETE cachename/* method to the API. Use this to clear the contents of a cache without removing
         the cache itself.
    </action>
</release>

<release version="0.5" date="2008-10-15" desc="Maintenance release of ehcache server">
    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="update">
        Set the "application/octet-stream" mime type to uploads which do not set a MIME Type, rather than erroring out.
    </action>
    <action dev="Greg Luck" type="update">
       	Add additional information to the cache element. 
    </action>
    <action dev="Greg Luck" type="update">
       	Update version to .5 to sync up with server. Feedback is that everyone wants releases of both the server and standalone server at the same
        time. 
    </action>
</release>
<release version="0.3" date="2008-8-3" desc="Maintenance release of ehcache server">
    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Add RESTful, resource oriented implementation.
    </action>
</release>